# sdl-egui-wgpu-soft-rend-base

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
src/: main.rs
src/app/: constants.rs  egui_render.rs  frame_history.rs  input_action.rs  input_manager.rs  log_utils.rs  mod.rs  screen_quad.rs  sdl_wgpu.rs  terminal.rs
src/app/engine/: mod.rs
src/app/engine/renderer/: frame_buffer.rs  mod.rs  screen_quad.rs
src/app/engine/world/: camera.rs  mod.rs
src/app/gui/: egui_render.rs  mod.rs
